fixed some bugs

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "keywords": [
     "react-simpler-forms",
+    "react-simpler-form",
     "multi-step-forms",
     "react",
     "react-form-validator",
